2004-02-08  David N. Welton  <davidw@dedasys.com>

	* generic/Makefile.am: Added magick libraries to libraries
	variables.

	* generic/TclMagick.c: Changed format type from int to long int to
	make compiler happy.

	* INSTALL: Added a bit to the install text.

	* configure.ac: Created some code to grab
	--with-magick=/path/to/GraphisMagickWand-config script and use
	that to get information about includes, ldflags and such needed to
	compile against Image or GraphicsMagick.

2004-01-29  David N. Welton  <davidw@dedasys.com>

	* generic/Makefile.am: Add correct instructions to build
	libTkMagick shared library.  Requires automake 1.5 or greater.

2004-01-25  David N. Welton  <davidw@dedasys.com>

	* tcl.m4: Moved to top level directory.

	* AUTHORS NEWS README INSTALL COPYING: Added to make automake
	happy.

	* configure.ac: Added this in the top level directory as it
	doesn't seem that it will be very happy in unix/.

	* generic/Makefile.am: Tentative addition of Makefile.am governing
	the building of libTclMagick.so.

2004-01-16  David N. Welton  <davidw@dedasys.com>

	* tests/test-*.tcl: Added "multiplatform" startup code for tests.

2004-01-15  David N. Welton  <davidw@dedasys.com>

	* generic/TclMagick.h: Added findMagickObj and myMagickError to .h
	file, and made then non-static in the .c file.  They are used in
	TkMagick.c.

2004-01-09  Rolf Schroedter <rolf.schroedter@dlr.de>

        * API changes:
		wandName AnnotateImage draw ?x y ? ?angle? text
        * New API's:
		magick version            # returns TclMagick version
		magick library ?-option?  # Returns Magick library attributes

2004-01-09  Rolf Schroedter <rolf.schroedter@dlr.de>

	* generic/TclMagick.c: Fixed types casts of (int *).

2004-01-09  David N. Welton  <davidw@dedasys.com>

	* unix/configure.ac: Added code to fetch GraphicsMagickWand-config
	--libs information.

	* unix/Makefile.in (SHLIB_LD_FLAGS): Added @LDFLAGS@ so that the
	GraphicsMagickWand-config information is passed on to the