@@ -1,3 +1,14 @@
+2004-02-08  Rolf Schroedter <rolf.schroedter@dlr.de>
+
+	* API renamed: 
+	    wandName ChannelImage --> wandName SeparateImageChannel
+	
+	* API changes: 
+	    wandName FxImageChannel channelType expr
+
+	* new API: 
+	    wandName FxImage expr
+
 2004-02-08  David N. Welton  <davidw@dedasys.com>
 
 	* generic/Makefile.am: Added magick libraries to libraries
